# SEWG

./: README.md
TrustApp/: README.md
TrustApp/sconscripts/32/: SConscript
TrustApp/sconscripts/64/: SConscript
TrustApp/src/: char2hex.c  char2hex.h  curve25519.c  curve25519.h  def.h  demo.c  demo.h  err.h  file.c  file.h  file_helper.c  file_helper.h  int2char.c  int2char.h  log.h  param.h  wgtee.c  wgtee.h
com.wireguard.android_443_orign/: README.md
com.wireguard.android_443_orign/app/: build.gradle
com.wireguard.android_443_orign/app/tools/libwg-go/: Makefile
com.wireguard.android_443_orign/app/tools/wireguard-go/: receive.go
com.wireguard.android_tee/: README.md
com.wireguard.android_tee/app/: local.properties
com.wireguard.android_tee/app/src/main/java/com/wireguard/android/backend/: GoBackend.java
com.wireguard.android_tee/app/src/main/java/com/wireguard/config/: Interface.java
com.wireguard.android_tee/app/src/main/java/com/wireguard/crypto/: Keypair.java
com.wireguard.android_tee/app/src/main/java/com/wireguard/util/: CoreLib.java
com.wireguard.android_tee/app/tools/: CMakeLists.txt
com.wireguard.android_tee/app/tools/libwg-go/: Makefile
com.wireguard.android_tee/app/tools/libwg-go/src/: api-android.go  jni.c
com.wireguard.android_tee/app/tools/wireguard-go/: constants.go  device.go  helper_test.go  noise-helpers.go  noise-protocol.go  noise-types.go  peer.go  send.go  uapi.go
com.wireguard.android_tee/app/tools/wireguard-go/wgtee/: wgtee.go
gopath/: README.md
gopath/pkg/mod/cache/download/golang.org/x/crypto/@v/: list  v0.0.0-20181001203147-e3636079e1a4.info  v0.0.0-20181001203147-e3636079e1a4.ziphash
gopath/pkg/mod/cache/download/golang.org/x/net/@v/: list  v0.0.0-20181005035420-146acd28ed58.ziphash
gopath/pkg/mod/cache/download/golang.org/x/sys/@v/: list  v0.0.0-20181005133103-4497e2df6f9e.info  v0.0.0-20181005133103-4497e2df6f9e.ziphash
gopath/pkg/mod/cache/vcs/4a22365141bc4eea5d5ac4a1395e653f2669485db75ef119e7bbec8e19b12a21/: FETCH_HEAD
gopath/pkg/mod/cache/vcs/4a22365141bc4eea5d5ac4a1395e653f2669485db75ef119e7bbec8e19b12a21/objects/pack/: pack-4acb9558cd0b848953016bac45faa5c752403706.idx
gopath/pkg/mod/cache/vcs/4a22365141bc4eea5d5ac4a1395e653f2669485db75ef119e7bbec8e19b12a21/refs/remotes/origin/: master
gopath/pkg/mod/cache/vcs/76a8992ccba6d77c6bcf031ff2b6d821cf232e4ad8d1f2362404fbd0a798d846/: FETCH_HEAD
gopath/pkg/mod/cache/vcs/76a8992ccba6d77c6bcf031ff2b6d821cf232e4ad8d1f2362404fbd0a798d846/objects/pack/: pack-d280aefb1e72263a0ee1390295fc9ad7e103902b.idx
gopath/pkg/mod/cache/vcs/76a8992ccba6d77c6bcf031ff2b6d821cf232e4ad8d1f2362404fbd0a798d846/refs/remotes/origin/: master
gopath/pkg/mod/cache/vcs/de5fd3af413a4f3f969455ae522b4002fcb7bb4c158f339396dfc77710c9007d/: FETCH_HEAD
gopath/pkg/mod/cache/vcs/de5fd3af413a4f3f969455ae522b4002fcb7bb4c158f339396dfc77710c9007d/objects/pack/: pack-f4f4cc31c510fe0c8998ad41a13caa0396814f6b.idx  pack-f4f4cc31c510fe0c8998ad41a13caa0396814f6b.pack
gopath/pkg/mod/cache/vcs/de5fd3af413a4f3f969455ae522b4002fcb7bb4c158f339396dfc77710c9007d/refs/heads/: master
wireguard_kernel/: README.md
wireguard_kernel/src/: noise.c  noise.h  receive.c  send.c  socket.c  socket.h
wireguard_kernel/src/tools/: genkey.c  pubkey.c
wireguard_kernel/src/wgtee/: def.h  log.h  param.h  tsca_comm.h  wgtee.c  wgtee.h
